<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical"
                                                       android:layout_width="match_parent"
                                                       android:layout_height="match_parent">

        <TextView
                android:id="@+id/spec_entry_title"
                android:text="@string/spec_entry_title"
                android:textSize="@dimen/spec_entry_title_font_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <!-- Wheel Diam. -->
        <TextView
                android:id="@+id/wheelDiameterTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/spec_entry_diam"
                android:textSize="@dimen/spec_entry_diam_font_size"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/wheelDiameterET"
                app:layout_constraintTop_toBottomOf="@+id/spec_entry_title"
                app:layout_constraintBottom_toTopOf="@+id/wheelWidthTV"/>
        <EditText
                android:id="@+id/wheelDiameterET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/spec_entry_diam_hint"
                android:inputType="numberSigned"
                app:layout_constraintStart_toEndOf="@+id/wheelDiameterTV" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/wheelDiameterTV"
                app:layout_constraintBottom_toBottomOf="@+id/wheelDiameterTV"/>

        <!-- Wheel Width-->
        <TextView
                android:id="@+id/wheelWidthTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/spec_entry_width"
                android:textSize="@dimen/spec_entry_width_font_size"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/wheelWidthET"
                app:layout_constraintTop_toBottomOf="@+id/wheelDiameterTV"
                app:layout_constraintBottom_toTopOf="@+id/wheelOffsetTV"/>
        <EditText
                android:id="@+id/wheelWidthET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/spec_entry_width_hint"
                app:layout_constraintStart_toEndOf="@+id/wheelWidthTV"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/wheelWidthTV"
                app:layout_constraintBottom_toBottomOf="@+id/wheelWidthTV"/>

        <!-- Wheel Offset -->
        <TextView
                android:id="@+id/wheelOffsetTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/spec_entry_offset"
                android:textSize="@dimen/spec_entry_offset_font_size"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/wheelOffsetET"
                app:layout_constraintTop_toBottomOf="@+id/wheelWidthTV"
                app:layout_constraintBottom_toTopOf="@+id/wheelCamberTV"/>
        <EditText
                android:id="@+id/wheelOffsetET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/spec_entry_offset_hint"
                app:layout_constraintStart_toEndOf="@+id/wheelOffsetTV"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/wheelOffsetTV"
                app:layout_constraintBottom_toBottomOf="@+id/wheelOffsetTV"/>

        <!-- Wheel Camber -->
        <TextView
                android:id="@+id/wheelCamberTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/spec_entry_camber"
                android:textSize="@dimen/spec_entry_camber_font_size"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/wheelCamberET"
                app:layout_constraintTop_toBottomOf="@+id/wheelOffsetTV"
                app:layout_constraintBottom_toTopOf="@+id/tireWidthTV"/>
        <EditText
                android:id="@+id/wheelCamberET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/spec_entry_camber_hint"
                app:layout_constraintStart_toEndOf="@+id/wheelCamberTV"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/wheelCamberTV"
                app:layout_constraintBottom_toBottomOf="@+id/wheelCamberTV"/>

        <!-- Tire Width -->
        <TextView
                android:id="@+id/tireWidthTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/spec_entry_tire_width"
                android:textSize="@dimen/spec_entry_tire_width_font_size"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/tireWidthET"
                app:layout_constraintTop_toBottomOf="@+id/wheelCamberTV"
                app:layout_constraintBottom_toTopOf="@+id/tireSidewallTV"/>
        <EditText
                android:id="@+id/tireWidthET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/spec_entry_tire_width_hint"
                app:layout_constraintStart_toEndOf="@+id/tireWidthTV"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tireWidthTV"
                app:layout_constraintBottom_toBottomOf="@+id/tireWidthTV"/>

        <!-- Tire Sidewall -->
        <TextView
                android:id="@+id/tireSidewallTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/spec_entry_sidewall"
                android:textSize="@dimen/spec_entry_sidewall_font_size"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/tireSidewallET"
                app:layout_constraintTop_toBottomOf="@+id/tireWidthTV"
                app:layout_constraintBottom_toTopOf="@+id/spec_entry_reset_btn"/>
        <EditText
                android:id="@+id/tireSidewallET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/spec_entry_sidewall_hint"
                app:layout_constraintStart_toEndOf="@+id/tireSidewallTV"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tireSidewallTV"
                app:layout_constraintBottom_toBottomOf="@+id/tireSidewallTV"/>

        <!--<Button-->
                <!--android:id="@+id/spec_entry_reset_btn"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/spec_entry_reset_button"-->
                <!--app:layout_constraintStart_toStartOf="parent"-->
                <!--app:layout_constraintHorizontal_bias="0.5"-->
                <!--app:layout_constraintEnd_toStartOf="@+id/spec_entry_preview_btn"-->
                <!--app:layout_constraintBottom_toBottomOf="parent"/>-->
        <!--<Button-->
                <!--android:id="@+id/spec_entry_preview_btn"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/spec_entry_preview_button"-->
                <!--app:layout_constraintStart_toEndOf="@+id/spec_entry_reset_btn"-->
                <!--app:layout_constraintHorizontal_bias="0.5"-->
                <!--app:layout_constraintEnd_toEndOf="parent"-->
                <!--app:layout_constraintBottom_toBottomOf="parent"/>-->
        <TextView
                android:id="@+id/spec_entry_preview_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/spec_entry_preview_button"
                android:layout_marginStart="0.5dp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:background="@color/colorPrimary"
                android:elevation="20dp"
                app:layout_constraintStart_toEndOf="@+id/spec_entry_reset_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        <TextView
                android:id="@+id/spec_entry_reset_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/spec_entry_reset_button"
                android:layout_marginEnd="0.5dp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:background="@color/colorPrimary"
                android:elevation="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/spec_entry_preview_btn"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>